--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
-#app { height: 100% }
+#app {
+  height: 100%;
+}
 html,
 body {
   position: relative;
@@ -44,4 +46,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+.nav div.main\list ul li a:hover {
+  color: darkgreen;
 }
