--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
-h1, p {
+h1,
+p {
   font-family: Lato;
+}
+.navbar {
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(8, 131, 178, 1) 22%,
+    rgba(10, 171, 221, 1) 28%,
+    rgba(11, 191, 242, 1) 31%,
+    rgba(11, 135, 160, 1) 100%
+  );
 }
