--- a/style.css
+++ b/style.css
@@ -24,3 +24,7 @@ p {
     rgba(11, 135, 160, 1) 100%
   );
 }
+
+background-color: #0093E9;
+background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+
