--- a/style.css
+++ b/style.css
@@ -24,7 +24,17 @@ p {
     rgba(11, 135, 160, 1) 100%
   );
 }
-
+.image{
+  position: relative;
+  height: 100vh;
+}
+.content{
+  display: flex;
+align-items: center;
+justify-content: center;
+position: absolute;
+height: 100vh;
+}
 
 
 
