--- a/style.css
+++ b/style.css
@@ -24,17 +24,15 @@ p {
     rgba(11, 135, 160, 1) 100%
   );
 }
-.image{
+.image {
   position: relative;
   height: 100vh;
 }
-.content{
+.content {
   display: flex;
-align-items: center;
-justify-content: center;
-position: absolute;
-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  height: 100vh;
+  width: 100%;
 }
-
-
-
