--- a/style.css
+++ b/style.css
@@ -36,3 +36,11 @@ p {
   height: 100vh;
   width: 100%;
 }
+.content span.img-text{
+  background-color: aliceblue;
+  text-transform: uppercase;
+  color: aliceblue;
+  padding: 1rem;
+  font-size: 1.5rem;
+  letter-spacing: 10px;
+}
