--- a/style.css
+++ b/style.css
@@ -44,3 +44,6 @@ p {
   font-size: 1.5rem;
   letter-spacing: 10px;
 }
+
+background-color: #0f277a;
+background-image: linear-gradient(90deg, #0f277a 0%, #1ca6b8 33%, #22c3b3 66%, #20bfc5 100%);
