--- a/style.css
+++ b/style.css
@@ -46,5 +46,5 @@ p {
 }
 
 
-background-color: #0f277a;
-background-image: linear-gradient(90deg, #0f277a 0%, #1ca6b8 33%, #22c3b3 66%, #20bfc5 100%);
+#root {background-color: #0f277a;
+background-image: linear-gradient(90deg, #0f277a 0%, #1ca6b8 33%, #22c3b3 66%, #20bfc5 100%);}
