--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ p {
   height: 100vh;
   width: 100%;
 }
-.content span.img-text{
+.content span.img-text {
   background-color: aliceblue;
   text-transform: uppercase;
   color: aliceblue;
@@ -45,6 +45,14 @@ p {
   letter-spacing: 10px;
 }
 
-
-#root {background-color: #0f277a;
-background-image: linear-gradient(90deg, #0f277a 0%, #1ca6b8 33%, #22c3b3 66%, #20bfc5 100%);}
+#root {
+  background-color: #0f277a;
+  background-image: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(8, 131, 178, 1) 22%,
+    rgba(10, 171, 221, 1) 28%,
+    rgba(11, 191, 242, 1) 31%,
+    rgba(11, 135, 160, 1) 100%
+  );
+}
